RESOLVED FIXED123911
DFG CheckArray(NonArray) should prove that the child isn't an array
https://bugs.webkit.org/show_bug.cgi?id=123911
Summary DFG CheckArray(NonArray) should prove that the child isn't an array
Filip Pizlo
Reported 2013-11-06 12:03:00 PST
Patch forthcoming.
Attachments
the patch (5.69 KB, patch)
2013-11-06 12:06 PST, Filip Pizlo
mhahnenberg: review+
eflews.bot: commit-queue-
Filip Pizlo
Comment 1 2013-11-06 12:03:20 PST
Filip Pizlo
Comment 2 2013-11-06 12:06:47 PST
Created attachment 216201 [details] the patch
EFL EWS Bot
Comment 3 2013-11-06 12:11:34 PST
Mark Hahnenberg
Comment 4 2013-11-06 12:13:33 PST
Comment on attachment 216201 [details] the patch r=me with fixed ports.
Filip Pizlo
Comment 5 2013-11-06 12:30:42 PST
Ryosuke Niwa
Comment 6 2013-11-06 13:43:10 PST
Looks like the test added by this patch has been failing: http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=js%2Fdfg-check-array-non-array.html e.g. http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r158781%20(554)/results.html --- /Volumes/Data/slave/mavericks-release-tests-wk1/build/layout-test-results/js/dfg-check-array-non-array-expected.txt +++ /Volumes/Data/slave/mavericks-release-tests-wk1/build/layout-test-results/js/dfg-check-array-non-array-actual.txt @@ -1,10 +1,10 @@ +CONSOLE MESSAGE: line 24: ReferenceError: Can't find variable: neverInlineFunction Tests that CheckArray(NonArray) actually proves that the input isn't an array. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS baz(["blah"], true) is "blahblah" -PASS successfullyParsed is true +FAIL successfullyParsed should be true (of type boolean). Was undefined (of type undefined). TEST COMPLETE
Note You need to log in before you can comment on or make changes to this bug.