DFG CheckArray(NonArray) should prove that the child isn't an array https://bugs.webkit.org/show_bug.cgi?id=123911 <rdar://problem/15202803>

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::jumpSlowForUnwantedArrayMode):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::isArrayType):

LayoutTests:

* js/dfg-check-array-non-array-expected.txt: Added.
* js/dfg-check-array-non-array.html: Added.
* js/script-tests/dfg-check-array-non-array.js: Added.
(foo):
(bar):
(baz):



Canonical link: https://commits.webkit.org/142095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158773 268f45cc-cd09-0410-ab3c-d52691b4dbfc